# caliby

./: .gitignore  README.md  build_apptainer.sh  download_model_params.sh  env_setup.sh  pins.txt  pyproject.toml  python_api.md
caliby/: __init__.py  api.py  checkpoint_utils.py  weights.py
caliby/configs/data/preprocessing/atomworks/: preprocess_examples.yaml
caliby/configs/eval/sampling/: generate_ensembles.yaml  score.yaml  score_ensemble.yaml  seq_des.yaml  seq_des_ensemble.yaml  seq_des_multi.yaml  seq_des_multi_ensemble.yaml  sidechain_pack.yaml
caliby/configs/seq_denoiser/: seq_denoiser.yaml
caliby/configs/seq_denoiser/denoiser/: atom_mpnn_denoiser.yaml
caliby/configs/seq_des/: inference.yaml
caliby/data/: const.py  data.py
caliby/data/datasets/: atomworks_sd_dataset.py
caliby/data/preprocessing/atomworks/: build_metadata_parquet_shards.py  clean_pdbs.py  clean_rcsb_cifs.py  preprocess_examples.py
caliby/data/transform/: preprocess.py  sd_featurizer.py
caliby/eval/eval_utils/: eval_metrics.py  eval_setup_utils.py  seq_des_utils.py
caliby/eval/sampling/: generate_ensembles.py  score.py  score_ensemble.py  seq_des_multi.py  seq_des_multi_ensemble.py  sidechain_pack.py
caliby/model/seq_denoiser/: lit_sd_model.py  sd_loss.py  sd_model.py
caliby/model/seq_denoiser/denoisers/: atom_mpnn_denoiser.py
caliby/model/seq_denoiser/denoisers/seq_design/: atom_mpnn.py  potts.py
examples/example_data/pdb_name_lists/: 2_native_pdbs.txt
examples/scripts/: score.sh  score_ensemble.sh  seq_des.sh  seq_des_multi.sh  seq_des_multi_constraints.sh  seq_des_multi_ensemble.sh  seq_des_multi_ensemble_constraints.sh  seq_des_multi_ensemble_subset.sh  seq_des_multi_subset.sh  sidechain_pack.sh
examples/scripts/homooligomers/: seq_des_multi_ensemble_homooligomers.sh  seq_des_multi_homooligomers.sh
notebooks/: Caliby.ipynb
notebooks/data/dhfr/: 1rx2.cif  1rx4.cif
