[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caliby"
version = "0.1"
description = "Potts model-based protein sequence design conditioned on structural ensembles"
requires-python = ">=3.12"
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    "atomworks-caliby @ git+https://github.com/richardshuai/atomworks-caliby.git@atomworks-caliby-v1.0.0",
    "protpardelle @ git+https://github.com/ProteinDesignLab/protpardelle-1c.git@7962da091a335251fa8e5ddef5d2c937fbd9d9ae",
    "biotite>=1.4.0",
    "einops>=0.8.1",
    "huggingface_hub",
    "hydra-core>=1.3.2",
    "joblib>=1.3.0",
    "lightning>=2.4.0",
    "natsort>=8.0.0",
    "numpy>=1.26.0",
    "omegaconf>=2.3.0",
    "p-tqdm>=1.4.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0",
    "scipy>=1.13.1",
    "torch>=2.6.0",
    "torchtyping==0.1.5",
    "tqdm>=4.57.0",
    "wandb>=0.17.0",
]

[project.optional-dependencies]
af2 = [
    "colabdesign @ git+https://github.com/sokrypton/ColabDesign.git@d024c4e846fea83c090afcbe89a313eeee8ec01e",
    "jax[cuda12]==0.4.34",
]

[tool.setuptools.packages.find]
exclude = ["tests", "scripts"]

[tool.setuptools.package-data]
caliby = ["configs/**/*.yaml"]

[tool.ruff]
line-length = 120
exclude = ["chroma"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E731"]

[tool.ruff.format]
quote-style = "preserve"   # avoid churning quotes
indent-style = "space"
